# zentask

./: README.md  debug_test.py  debug_timeout.py  main.py  pyproject.toml
src/zentask/: __init__.py
src/zentask/core/: manager.py  state_machine.py
src/zentask/tests/: test_unit.py
zentask/: core.py  example.py
zentask/core/: __init__.py  manager.py  state_machine.py
zentask/tests/: test_blackbox.py  test_state_machine.py  test_whitebox.py
