[project]
name = "zentask"
version = "0.1.0"
description = "A zero-dependency, industrial-grade local background task scheduler for Python."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "dingtongbin"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dingtongbin/zentask"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zentask"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
